update docs for hole-punching

--- a/hole-punching/libp2p/utils/future.html
+++ b/hole-punching/libp2p/utils/future.html
@@ -17,10 +17,10 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>libp2p/errors</title>
-<link rel="stylesheet" type="text/css" href="../nimdoc.out.css">
+<title>libp2p/utils/future</title>
+<link rel="stylesheet" type="text/css" href="../../nimdoc.out.css">
 
-<script type="text/javascript" src="../dochack.js"></script>
+<script type="text/javascript" src="../../dochack.js"></script>
 
 <script type="text/javascript">
 function main() {
@@ -69,7 +69,7 @@ window.addEventListener('DOMContentLoaded', main);
 <body>
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">libp2p/errors</h1>
+    <h1 class="title">libp2p/utils/future</h1>
     <div class="row">
   <div class="three columns">
   <div class="theme-switch-wrapper">
@@ -82,7 +82,7 @@ window.addEventListener('DOMContentLoaded', main);
   <div id="global-links">
     <ul class="simple">
     <li>
-      <a href="../theindex.html">Index</a>
+      <a href="../../theindex.html">Index</a>
     </li>
     </ul>
   </div>
@@ -199,46 +199,17 @@ window.addEventListener("DOMContentLoaded", main2);
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#LPError"
-    title="LPError = object of CatchableError">LPError</a></li>
+      <li><a class="reference" href="#AllFuturesFailedError"
+    title="AllFuturesFailedError = object of CatchableError">AllFuturesFailedError</a></li>
 
   </ul>
 </li>
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">allFuturesThrowing
-      <li><a class="reference" href="#allFuturesThrowing%2Cvarargs%5BFuture%5BT%5D%5D"
-    title="allFuturesThrowing[T](args: varargs[Future[T]]): Future[void]">allFuturesThrowing[T](args: varargs[Future[T]]): Future[void]</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">toException
-      <li><a class="reference" href="#toException%2Ccstring"
-    title="toException(e: cstring): ref LPError">toException(e: cstring): ref LPError</a></li>
-  <li><a class="reference" href="#toException%2Cstring"
-    title="toException(e: string): ref LPError">toException(e: string): ref LPError</a></li>
-
-  </ul>
-
-  </ul>
-</li>
-<li>
-  <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
-  <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">checkFutures
-      <li><a class="reference" href="#checkFutures.m%2Cseq%5BFuture%5BT%5D%5D%2Cuntyped"
-    title="checkFutures[T](futs: seq[Future[T]]; exclude: untyped = []): untyped">checkFutures[T](futs: seq[Future[T]]; exclude: untyped = []): untyped</a></li>
-
-  </ul>
-
-  </ul>
-</li>
-<li>
-  <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
-  <ul class="simple simple-toc-section">
-      <ul class="simple nested-toc-section">tryAndWarn
-      <li><a class="reference" href="#tryAndWarn.t%2Cstatic%5Bstring%5D%2Cuntyped"
-    title="tryAndWarn(message: static[string]; body: untyped): untyped">tryAndWarn(message: static[string]; body: untyped): untyped</a></li>
+      <ul class="simple nested-toc-section">anyCompleted
+      <li><a class="reference" href="#anyCompleted%2Cseq%5BFuture%5BT%5D%5D"
+    title="anyCompleted[T](futs: seq[Future[T]]): Future[Future[T]]">anyCompleted[T](futs: seq[Future[T]]): Future[Future[T]]</a></li>
 
   </ul>
 
@@ -249,9 +220,9 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </div>
   &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L1"
+href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/utils/future.nim#L1"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L1" class="link-seesrc" target="_blank" >Edit</a>
 
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
@@ -260,15 +231,15 @@ class="link-seesrc" target="_blank">Source</a>
   <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
-<div id="LPError" class="tohide">
-<dt><pre><a href="errors.html#LPError"><span class="Identifier">LPError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">CatchableError</span></pre></dt>
+<div id="AllFuturesFailedError" class="tohide">
+<dt><pre><a href="future.html#AllFuturesFailedError"><span class="Identifier">AllFuturesFailedError</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">CatchableError</span></pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L10"
+href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/utils/future.nim#L18"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L10" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L18" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -277,73 +248,16 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="allFuturesThrowing,varargs[Future[T]]" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#allFuturesThrowing%2Cvarargs%5BFuture%5BT%5D%5D"><span class="Identifier">allFuturesThrowing</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">args</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span></pre></dt>
+<div id="anyCompleted,seq[Future[T]]" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#anyCompleted%2Cseq%5BFuture%5BT%5D%5D"><span class="Identifier">anyCompleted</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">futs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span> {.
+    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
-
+Returns a future that will complete with the first future that completes. If all futures fail or futs is empty, the returned future will fail with AllFuturesFailedError.
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L47"
+href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/utils/future.nim#L20"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L47" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="toException,cstring" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#toException%2Ccstring"><span class="Identifier">toException</span></a><span class="Other">(</span><span class="Identifier">e</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">ref</span> <a href="errors.html#LPError"><span class="Identifier">LPError</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L12"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L12" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="toException,string" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#toException%2Cstring"><span class="Identifier">toException</span></a><span class="Other">(</span><span class="Identifier">e</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">ref</span> <a href="errors.html#LPError"><span class="Identifier">LPError</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L15"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L15" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-
-</dl></div>
-<div class="section" id="17">
-<h1><a class="toc-backref" href="#17">Macros</a></h1>
-<dl class="item">
-<div id="checkFutures.m,seq[Future[T]],untyped" class="tohide">
-<dt><pre><span class="Keyword">macro</span> <a href="#checkFutures.m%2Cseq%5BFuture%5BT%5D%5D%2Cuntyped"><span class="Identifier">checkFutures</span></a><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">futs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">exclude</span><span class="Other">:</span> <span class="Identifier">untyped</span> <span class="Other">=</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L22"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-
-</dl></div>
-<div class="section" id="18">
-<h1><a class="toc-backref" href="#18">Templates</a></h1>
-<dl class="item">
-<div id="tryAndWarn.t,static[string],untyped" class="tohide">
-<dt><pre><span class="Keyword">template</span> <a href="#tryAndWarn.t%2Cstatic%5Bstring%5D%2Cuntyped"><span class="Identifier">tryAndWarn</span></a><span class="Other">(</span><span class="Identifier">message</span><span class="Other">:</span> <span class="Identifier">static</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">body</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/hole-punching/libp2p/errors.nim#L69"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/errors.nim#L69" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/utils/future.nim#L20" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -357,7 +271,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-14 12:41:15 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-14 12:41:16 UTC</small>
       </div>
     </div>
   </div>
