--- a/hole-punching/libp2p/protobuf/minprotobuf.html
+++ b/hole-punching/libp2p/protobuf/minprotobuf.html
@@ -921,7 +921,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>
+<a href="../utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>
 </dl></div>
 
   </div>
@@ -931,7 +931,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-27 12:43:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-14 12:41:10 UTC</small>
       </div>
     </div>
   </div>
